objects/LLC_BI__Account_Covenant__c.object
<CustomObject>
    <description>This is the junction object between Covenants and Accounts.</description>
    <fields>
        <fullName>Covenant_Next_Evaluation_Date__c</fullName>
        <formula>LLC_BI__Covenant2__r.LLC_BI__Next_Evaluation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenant Next Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Covenant_Relationship__c</fullName>
        <formula>LLC_BI__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenant Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covenant_Type_Active__c</fullName>
        <formula>LLC_BI__Covenant2__r.LLC_BI__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenant Type Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Covenant_Type_Name__c</fullName>
        <formula>LLC_BI__Covenant2__r.LLC_BI__Covenant_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenant Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is required. It is manually populated within the Covenant Management app. It identifies the relationship associated with the Account Covenant record and is automatically populated when creating a new record from an existing relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Account_Covenants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. It identifies the contact associated with the Account Covenant record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Covenants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant2__c</fullName>
        <description>This field is required and is automatically populated. It identifies the Covenant Mgmt record associated with the Account Covenant record and is automatically populated when creating a new Account Covenant.</description>
        <label>Covenant</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Account_Covenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Covenant</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>